--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "serverless-vpc-discovery",
-  "version": "1.0.14",
+  "name": "@env0/serverless-vpc-discovery",
+  "version": "1.0.15",
   "engines": {
     "node": ">=4.0"
   },
