Update imports and test

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
       "mocha",
       "node"
     ],
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true
   },
   "include": [
     "src/**/*.ts"
