--- a/package.json
+++ b/package.json
@@ -26,16 +26,19 @@
   "main": "dist/src/index.js",
   "bin": {},
   "scripts": {
-    "test": "nyc mocha -r ts-node/register --project tsconfig.json test/index.test.js && nyc report --reporter=text-summary",
+    "test": "nyc mocha -r ts-node/register --project tsconfig.json test/index.test.ts && nyc report --reporter=text-summary",
     "lint": "eslint src --ext .ts",
     "lint:fix": "npm run lint -- --fix",
     "build": "tsc --project ."
   },
   "devDependencies": {
+    "@types/mocha": "^8.0.3",
+    "@types/node": "^14.14.6",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
     "aws-sdk-mock": "^5.1.0",
     "chai": "^4.1.0",
+    "chai-spies": "^1.0.0",
     "eslint": "^7.12.1",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-standard": "^16.0.1",
@@ -43,7 +46,10 @@
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
-    "mocha": "^8.2.1"
+    "mocha": "^8.2.1",
+    "mocha-param": "^2.0.1",
+    "nyc": "^15.1.0",
+    "ts-node": "^9.0.0"
   },
   "dependencies": {
     "aws-sdk": "^2.785.0",
