--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
       "node"
     ],
     "allowSyntheticDefaultImports": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "esModuleInterop": true
   },
   "include": [
     "src/**/*.ts"
