--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "mocha-param": "^2.0.1",
     "nyc": "^15.1.0",
     "randomstring": "^1.1.5",
+    "serverless": "^2.11.1",
     "shelljs": "^0.8.4",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
