--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "js-yaml": "^3.14.0",
     "mocha": "^8.2.1",
     "mocha-param": "^2.0.1",
     "nyc": "^15.1.0",
