--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "mocha-param": "^2.0.1",
     "nyc": "^15.1.0",
     "randomstring": "^1.2.1",
-    "serverless": "~2.56.0",
+    "serverless": "^2.57.0",
     "shelljs": "^0.8.4",
     "ts-node": "^10.2.1",
     "typescript": "~4.3.5"
