--- a/.github/workflows/test-build-publish.yml
+++ b/.github/workflows/test-build-publish.yml
@@ -13,6 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
+        serverless: [ legacy, dependencies ]
         node-version: [ 12.x, 14.x, 16.x ]
     steps:
       - uses: actions/checkout@master
@@ -22,6 +23,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
       - run: npm install
+      - run: '[ "${{ matrix.serverless }}" == "legacy" ] && npm install serverless@latest-2'
       - run: npm run lint
       - run: npm test
 
