--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
   "scripts": {
     "test": "nyc mocha -r ts-node/register --project tsconfig.json test/unit-tests/index.test.ts && nyc report --reporter=text-summary",
     "integration-test": "nyc mocha -r ts-node/register --project tsconfig.json test/integration-tests/*.test.ts && nyc report --reporter=text-summary",
-    "lint": "eslint src --ext .ts",
-    "lint:fix": "npm run lint -- --fix",
-    "build": "tsc --project ."
+    "lint": "tslint --project . && tslint --project tsconfig.json",
+    "build": "tsc --project .",
+    "prepare": "npm run build"
   },
   "files": [
     "*.js",
@@ -48,33 +48,25 @@
     ]
   },
   "devDependencies": {
-    "@types/mocha": "^9.1.1",
-    "@types/node": "^16.18.14",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
-    "aws-sdk-mock": "^5.8.0",
-    "chai": "^4.3.7",
-    "chai-spies": "^1.0.0",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jsx-a11y": "6.4.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.2.0",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "@types/mocha": "^10.0.6",
+    "@types/node": "^20.10.3",
+    "aws-sdk-client-mock": "^3.0.0",
+    "chai": "^4.3.10",
+    "chai-spies": "^1.1.0",
     "js-yaml": "^4.1.0",
-    "mocha": "^9.2.2",
+    "mocha": "^10.2.0",
     "mocha-param": "^2.0.1",
     "nyc": "^15.1.0",
-    "randomstring": "^1.2.3",
-    "serverless": "^3.28.1",
+    "randomstring": "^1.3.0",
+    "serverless": "^3.38.0",
     "shelljs": "^0.8.5",
     "ts-node": "^10.9.1",
-    "typescript": "~4.3.5"
+    "typescript": "5.3.2"
   },
   "dependencies": {
-    "aws-sdk": "^2.1331.0"
+    "@aws-sdk/client-ec2": "^3.465.0",
+    "@smithy/smithy-client": "^2.1.16",
+    "@smithy/types": "^2.6.0",
+    "@smithy/util-retry": "^2.0.7"
   }
 }
