--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "serverless": "^3.38.0",
     "shelljs": "^0.8.5",
     "ts-node": "^10.9.1",
+    "tslint": "^6.1.3",
     "typescript": "5.3.2"
   },
   "dependencies": {
