--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
   "scripts": {
     "test": "nyc mocha -r ts-node/register --project tsconfig.json test/unit-tests/index.test.ts && nyc report --reporter=text-summary",
     "integration-test": "nyc mocha -r ts-node/register --project tsconfig.json test/integration-tests/*.test.ts && nyc report --reporter=text-summary",
-    "lint": "tslint --project . && tslint --project tsconfig.json",
+    "lint": "eslint src --ext .ts",
+    "lint:fix": "npm run lint -- --fix",
     "build": "tsc --project .",
     "prepare": "npm run build"
   },
@@ -50,9 +51,12 @@
   "devDependencies": {
     "@types/mocha": "^10.0.6",
     "@types/node": "^20.10.3",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
     "aws-sdk-client-mock": "^3.0.0",
     "chai": "^4.3.10",
     "chai-spies": "^1.1.0",
+    "eslint": "^7.32.0",
+    "eslint-config-standard": "^16.0.3",
     "js-yaml": "^4.1.0",
     "mocha": "^10.2.0",
     "mocha-param": "^2.0.1",
@@ -61,13 +65,11 @@
     "serverless": "^3.38.0",
     "shelljs": "^0.8.5",
     "ts-node": "^10.9.1",
-    "tslint": "^6.1.3",
-    "typescript": "5.3.2"
+    "typescript": "5.1.6"
   },
   "dependencies": {
     "@aws-sdk/client-ec2": "^3.465.0",
     "@smithy/smithy-client": "^2.1.16",
-    "@smithy/types": "^2.6.0",
     "@smithy/util-retry": "^2.0.7"
   }
 }
