--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "chai-spies": "^1.1.0",
     "eslint": "^7.32.0",
     "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.29.0",
     "js-yaml": "^4.1.0",
     "mocha": "^10.2.0",
     "mocha-param": "^2.0.1",
