--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "eslint": "^7.32.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-node": "^11.1.0",
     "js-yaml": "^4.1.0",
     "mocha": "^10.2.0",
     "mocha-param": "^2.0.1",
