--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.2.0",
     "js-yaml": "^4.1.0",
     "mocha": "^10.2.0",
     "mocha-param": "^2.0.1",
