--- a/test/integration-tests/basic/only-functions/serverless.yml
+++ b/test/integration-tests/basic/only-functions/serverless.yml
@@ -17,12 +17,15 @@ functions:
     # subnet ids and security group ids
     vpcDiscovery:
       vpcName: ${env:TEST_VPC_NAME}
-      subnetNames:
-        - ${env:TEST_VPC_NAME}_intranet_us-west-2a
-        - ${env:TEST_VPC_NAME}_intranet_us-west-2b
-        - ${env:TEST_VPC_NAME}_intranet_us-west-2c
-      securityGroupNames:
-        - ${env:TEST_VPC_NAME}_maintenance
+      subnets:
+        - tagKey: Name
+          tagValues:
+            - ${env:TEST_VPC_NAME}_intranet_us-west-2a
+            - ${env:TEST_VPC_NAME}_intranet_us-west-2b
+            - ${env:TEST_VPC_NAME}_intranet_us-west-2c
+      securityGroups:
+        - names:
+            - ${env:TEST_VPC_NAME}_maintenance
 
 plugins:
   - serverless-vpc-discovery
