--- a/package.json
+++ b/package.json
@@ -49,11 +49,14 @@
     ]
   },
   "devDependencies": {
+    "@aws-sdk/client-lambda": "^3.465.0",
+    "@types/js-yaml": "^4.0.9",
     "@types/mocha": "^10.0.6",
     "@types/node": "^20.10.3",
+    "@types/randomstring": "^1.1.11",
+    "@types/shelljs": "^0.8.15",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
-    "aws-sdk-client-mock": "^3.0.0",
     "chai": "^4.3.10",
     "chai-spies": "^1.1.0",
     "eslint": "^7.32.0",
@@ -74,6 +77,7 @@
   "dependencies": {
     "@aws-sdk/client-ec2": "^3.467.0",
     "@smithy/smithy-client": "^2.1.18",
-    "@smithy/util-retry": "^2.0.8"
+    "@smithy/util-retry": "^2.0.8",
+    "ts-md5": "^1.3.1"
   }
 }
