--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@types/shelljs": "^0.8.15",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
+    "aws-sdk-client-mock": "^3.0.0",
     "chai": "^4.3.10",
     "chai-spies": "^1.1.0",
     "eslint": "^7.32.0",
