--- a/test/integration-tests/basic/multi-tag/serverless.yml
+++ b/test/integration-tests/basic/multi-tag/serverless.yml
@@ -24,9 +24,9 @@ functions:
       subnets:
         - tagKey: Name
           tagValues:
-            - ${env:TEST_VPC_NAME}_maintenance_us-west-2a
-            - ${env:TEST_VPC_NAME}_maintenance_us-west-2b
-            - ${env:TEST_VPC_NAME}_maintenance_us-west-2c
+            - ${env:TEST_VPC_NAME}_intranet_us-west-2a
+            - ${env:TEST_VPC_NAME}_intranet_us-west-2b
+            - ${env:TEST_VPC_NAME}_intranet_us-west-2c
       securityGroups:
         - tagKey: Name
           tagValues:
