--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "serverless-vpc-discovery",
-  "version": "5.0.0",
+  "version": "5.0.1",
   "engines": {
     "node": ">=14"
   },
@@ -77,6 +77,9 @@
   },
   "dependencies": {
     "@aws-sdk/client-ec2": "^3.467.0",
+    "@aws-sdk/credential-providers": "^3.495.0",
+    "@smithy/config-resolver": "^2.1.0",
+    "@smithy/node-config-provider": "^2.2.0",
     "@smithy/smithy-client": "^2.1.18",
     "@smithy/util-retry": "^2.0.8",
     "ts-md5": "^1.3.1"
