AT-12784: Release 6.0.0 https://amplify-education.atlassian.net/browse/AT-12784

--- a/test/integration-tests/basic/basic-example/serverless.yml
+++ b/test/integration-tests/basic/basic-example/serverless.yml
@@ -1,5 +1,7 @@
 # basic example
-service: test-sls-vpc-discovery-${env:RANDOM_STRING}
+service: svd-basic
+
+frameworkVersion: "4.4.11"
 
 provider:
   name: aws
