--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "serverless-vpc-discovery",
-  "version": "5.0.2",
+  "version": "6.0.0",
   "engines": {
-    "node": ">=14"
+    "node": ">=16"
   },
   "description": "Serverless Plugin to modify VPC values",
   "author": "Amplify Education Inc",
@@ -49,39 +49,40 @@
     ]
   },
   "devDependencies": {
-    "@aws-sdk/client-lambda": "^3.465.0",
+    "@aws-sdk/client-lambda": "^3.696.0",
+    "@types/chai": "^5.0.1",
+    "@types/chai-spies": "^1.0.6",
     "@types/js-yaml": "^4.0.9",
-    "@types/mocha": "^10.0.6",
-    "@types/node": "^20.10.3",
-    "@types/randomstring": "^1.1.11",
+    "@types/mocha": "^10.0.9",
+    "@types/node": "^22.9.1",
+    "@typescript-eslint/eslint-plugin": "^8.15.0",
+    "@types/randomstring": "^1.3.0",
     "@types/shelljs": "^0.8.15",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
-    "aws-sdk-client-mock": "^3.0.0",
-    "chai": "^4.3.10",
+    "aws-sdk-client-mock": "^4.1.0",
+    "chai": "^4.5.0",
     "chai-spies": "^1.1.0",
-    "eslint": "^7.32.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.29.0",
+    "eslint": "^8.57.1",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.2.0",
+    "eslint-plugin-promise": "^6.6.0",
     "js-yaml": "^4.1.0",
-    "mocha": "^10.2.0",
+    "mocha": "^10.8.2",
     "mocha-param": "^2.0.1",
-    "nyc": "^15.1.0",
+    "nyc": "^17.1.0",
     "randomstring": "^1.3.0",
-    "serverless": "^3.38.0",
+    "serverless": "^4.4.11",
     "shelljs": "^0.8.5",
-    "ts-node": "^10.9.1",
-    "typescript": "5.1.6"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.3"
   },
   "dependencies": {
-    "@aws-sdk/client-ec2": "^3.467.0",
-    "@aws-sdk/credential-providers": "^3.495.0",
-    "@smithy/config-resolver": "^2.1.0",
-    "@smithy/node-config-provider": "^2.2.0",
-    "@smithy/smithy-client": "^2.1.18",
-    "@smithy/util-retry": "^2.0.8",
+    "@aws-sdk/client-ec2": "^3.696.0",
+    "@aws-sdk/credential-providers": "^3.696.0",
+    "@smithy/config-resolver": "^3.0.12",
+    "@smithy/node-config-provider": "^3.1.11",
+    "@smithy/smithy-client": "^3.4.4",
+    "@smithy/util-retry": "^3.0.10",
     "ts-md5": "^1.3.1"
   }
 }
