--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
   "main": "dist/src/index.js",
   "bin": {},
   "scripts": {
-    "test": "nyc mocha -r ts-node/register --project tsconfig.json test/unit-tests/index.test.ts && nyc report --reporter=text-summary",
-    "integration-test": "nyc mocha -r ts-node/register --project tsconfig.json test/integration-tests/*.test.ts && nyc report --reporter=text-summary",
+    "test": "nyc mocha -r tsx test/unit-tests/index.test.ts && nyc report --reporter=text-summary",
+    "integration-test": "nyc mocha -r tsx test/integration-tests/*.test.ts && nyc report --reporter=text-summary",
     "lint": "eslint src --ext .ts",
     "lint:fix": "npm run lint -- --fix",
     "build": "tsc --project .",
@@ -49,40 +49,40 @@
     ]
   },
   "devDependencies": {
-    "@aws-sdk/client-lambda": "^3.696.0",
-    "@types/chai": "^5.0.1",
+    "@aws-sdk/client-lambda": "^3.990.0",
+    "@types/chai": "^5.2.3",
     "@types/chai-spies": "^1.0.6",
     "@types/js-yaml": "^4.0.9",
-    "@types/mocha": "^10.0.9",
-    "@types/node": "^22.9.1",
-    "@typescript-eslint/eslint-plugin": "^8.15.0",
+    "@types/mocha": "^10.0.10",
+    "@types/node": "^25.2.3",
     "@types/randomstring": "^1.3.0",
-    "@types/shelljs": "^0.8.15",
+    "@types/shelljs": "^0.10.0",
+    "@typescript-eslint/eslint-plugin": "^8.55.0",
     "aws-sdk-client-mock": "^4.1.0",
-    "chai": "^4.5.0",
+    "chai": "^6.2.2",
     "chai-spies": "^1.1.0",
-    "eslint": "^8.57.1",
+    "eslint": "^8.57.0",
     "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-n": "^16.0.0",
     "eslint-plugin-promise": "^6.6.0",
-    "js-yaml": "^4.1.0",
+    "js-yaml": "^4.1.1",
     "mocha": "^10.8.2",
     "mocha-param": "^2.0.1",
     "nyc": "^17.1.0",
-    "randomstring": "^1.3.0",
-    "serverless": "^4.4.11",
+    "randomstring": "^1.3.1",
+    "serverless": "^4.32.0",
     "shelljs": "^0.8.5",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.6.3"
+    "tsx": "^4.21.0",
+    "typescript": "^5.9.3"
   },
   "dependencies": {
-    "@aws-sdk/client-ec2": "^3.696.0",
-    "@aws-sdk/credential-providers": "^3.696.0",
-    "@smithy/config-resolver": "^3.0.12",
-    "@smithy/node-config-provider": "^3.1.11",
-    "@smithy/smithy-client": "^3.4.4",
-    "@smithy/util-retry": "^3.0.10",
-    "ts-md5": "^1.3.1"
+    "@aws-sdk/client-ec2": "^3.990.0",
+    "@aws-sdk/credential-providers": "^3.990.0",
+    "@smithy/config-resolver": "^4.4.6",
+    "@smithy/node-config-provider": "^4.3.8",
+    "@smithy/smithy-client": "^4.11.3",
+    "@smithy/util-retry": "^4.2.8",
+    "ts-md5": "^2.0.1"
   }
 }
