Drop Node16.x support and update packages

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "rootDir": ".",
-    "target": "es6",
+    "target": "ES2022",
     "sourceMap": false,
     "outDir": "dist",
     "types": [
