--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,20 +1,30 @@
+# https://docs.npmjs.com/trusted-publishers#step-2-configure-your-cicd-workflow
 name: Test, Lint, Release and Publish
+
 on:
   push:
     branches:
       - main
+
+# https://docs.npmjs.com/trusted-publishers
+permissions:
+  id-token: write    # Required for OIDC
+  contents: write    # Required for the release and tag creation
+
 jobs:
   main:
     name: Release and publish Node package
-    runs-on: ubuntu-latest
+    runs-on: github-hosted-static-ip
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Install and test
         uses: actions/setup-node@v4
         with:
-          node-version: 18.x
+          node-version: 24.x
           registry-url: 'https://registry.npmjs.org'
 
       - run: npm install
@@ -24,13 +34,13 @@ jobs:
 
       - name: Extract version
         id: extract_version
-        uses: Saionaro/extract-package-version@v1.2.1
+        uses: Saionaro/extract-package-version@v1.3.0
 
       - name: Get latest tag
         id: get_latest_tag
-        uses: actions-ecosystem/action-get-latest-tag@v1
+        uses: WyriHaximus/github-action-get-previous-tag@v1
         with:
-          initial_version: 'v${{ steps.extract_version.outputs.version }}'
+          fallback: 'v0.0.0'
 
       - name: See if version changed
         run: |
@@ -48,7 +58,7 @@ jobs:
 
       - name: Create release
         if: env.VERSION_CHANGED == 'true'
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@v2
         with:
           tag_name: 'v${{ steps.extract_version.outputs.version }}'
           generate_release_notes: true
@@ -57,12 +67,6 @@ jobs:
 
       - name: Publish new version
         if: env.VERSION_CHANGED == 'true'
-        # Note: Setting NODE_AUTH_TOKEN as job|workspace wide env var won't work
-        #       as it appears actions/setup-node sets own value
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: npm publish --verbose
-
-      - name: Print dirs
-        if: failure()
-        run: find /home/runner/.npm/_logs/ -type f -exec cat {} \;
+          NPM_CONFIG_PROVENANCE: true
+        run: npm publish --access public --verbose
