--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
   "main": "dist/src/index.js",
   "bin": {},
   "scripts": {
-    "test": "nyc mocha -r tsx test/unit-tests/index.test.ts && nyc report --reporter=text-summary",
-    "integration-test": "nyc mocha -r tsx test/integration-tests/*.test.ts && nyc report --reporter=text-summary",
+    "test": "c8 mocha -r tsx test/unit-tests/index.test.ts",
+    "integration-test": "mocha -r tsx test/integration-tests/*.test.ts",
     "lint": "eslint src",
     "lint:fix": "npm run lint -- --fix",
     "build": "tsc --project .",
@@ -43,11 +43,6 @@
     "*.json",
     "dist/**/*.js"
   ],
-  "nyc": {
-    "extension": [
-      ".ts"
-    ]
-  },
   "devDependencies": {
     "@aws-sdk/client-lambda": "~3.967.0",
     "@types/chai": "^5.0.1",
@@ -66,7 +61,7 @@
     "js-yaml": "^4.1.1",
     "mocha": "^11.0.0",
     "mocha-param": "^2.0.1",
-    "nyc": "^17.1.0",
+    "c8": "^10.0.0",
     "randomstring": "^1.3.1",
     "serverless": "^4.32.0",
     "shelljs": "^0.8.5",
