--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "serverless-vpc-discovery",
-  "version": "7.0.0",
+  "version": "8.0.0",
   "engines": {
-    "node": ">=18"
+    "node": ">=20"
   },
   "description": "Serverless Plugin to modify VPC values",
   "author": "Amplify Education Inc",
@@ -44,14 +44,14 @@
     "dist/**/*.js"
   ],
   "devDependencies": {
-    "@aws-sdk/client-lambda": "~3.967.0",
+    "@aws-sdk/client-lambda": "~3.992.0",
     "@types/chai": "^5.0.1",
     "@types/chai-spies": "^1.0.6",
     "@types/js-yaml": "^4.0.9",
     "@types/mocha": "^10.0.10",
-    "@types/node": "^18.0.0",
+    "@types/node": "^20.0.0",
     "@types/randomstring": "^1.3.0",
-    "@types/shelljs": "^0.8.15",
+    "@types/shelljs": "^0.10.0",
     "@typescript-eslint/eslint-plugin": "^8.56.0",
     "aws-sdk-client-mock": "^4.1.0",
     "chai": "^6.2.2",
@@ -64,20 +64,21 @@
     "c8": "^10.0.0",
     "randomstring": "^1.3.1",
     "serverless": "^4.32.0",
-    "shelljs": "^0.8.5",
+    "shelljs": "^0.10.0",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   },
   "dependencies": {
-    "@aws-sdk/client-ec2": "~3.967.0",
-    "@aws-sdk/credential-providers": "~3.967.0",
-    "@smithy/config-resolver": "~4.4.5",
-    "@smithy/node-config-provider": "~4.3.7",
-    "@smithy/smithy-client": "~4.10.4",
-    "@smithy/util-retry": "~4.2.7",
-    "ts-md5": "^1.3.1"
+    "@aws-sdk/client-ec2": "~3.992.0",
+    "@aws-sdk/credential-providers": "~3.992.0",
+    "@smithy/config-resolver": "~4.4.6",
+    "@smithy/node-config-provider": "~4.3.8",
+    "@smithy/smithy-client": "~4.11.5",
+    "@smithy/util-retry": "~4.2.8",
+    "ts-md5": "^2.0.1"
   },
   "overrides": {
-    "fast-xml-parser": "^5.3.6"
+    "fast-xml-parser": "^5.3.6",
+    "diff": "^8.0.3"
   }
 }
