--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "dist/**/*.js"
   ],
   "devDependencies": {
-    "@aws-sdk/client-lambda": "~3.992.0",
+    "@aws-sdk/client-lambda": "~3.996.0",
     "@types/chai": "^5.0.1",
     "@types/chai-spies": "^1.0.6",
     "@types/js-yaml": "^4.0.9",
@@ -52,33 +52,32 @@
     "@types/node": "^20.0.0",
     "@types/randomstring": "^1.3.0",
     "@types/shelljs": "^0.10.0",
-    "@typescript-eslint/eslint-plugin": "^8.56.0",
+    "typescript-eslint": "^8.56.0",
     "aws-sdk-client-mock": "^4.1.0",
     "chai": "^6.2.2",
     "chai-spies": "^1.1.0",
     "eslint": "^9.0.0",
-    "neostandard": "^0.12.0",
     "js-yaml": "^4.1.1",
     "mocha": "^11.0.0",
     "mocha-param": "^2.0.1",
     "c8": "^10.0.0",
     "randomstring": "^1.3.1",
-    "serverless": "^4.32.0",
+    "serverless": "^4.33.0",
     "shelljs": "^0.10.0",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   },
   "dependencies": {
-    "@aws-sdk/client-ec2": "~3.992.0",
-    "@aws-sdk/credential-providers": "~3.992.0",
-    "@smithy/config-resolver": "~4.4.6",
-    "@smithy/node-config-provider": "~4.3.8",
-    "@smithy/smithy-client": "~4.11.5",
-    "@smithy/util-retry": "~4.2.8",
-    "ts-md5": "^2.0.1"
+    "@aws-sdk/client-ec2": "~3.996.0",
+    "@aws-sdk/credential-providers": "~3.996.0",
+    "@smithy/config-resolver": "~4.4.7",
+    "@smithy/node-config-provider": "~4.3.9",
+    "@smithy/smithy-client": "~4.11.7",
+    "@smithy/util-retry": "~4.2.9"
   },
   "overrides": {
     "fast-xml-parser": "^5.3.6",
-    "diff": "^8.0.3"
+    "diff": "^8.0.3",
+    "minimatch": "^10.2.1"
   }
 }
